# nix-templates

./: README.md  flake.nix
default-package-flake/: flake.nix
python-pdm/: flake.nix
python-poetry2nix/: flake.nix
python-shell/: flake.nix
rust-bevy/: Cargo.toml  flake.nix
